# chess-mcp-sachin

./: README.md  pyproject.toml
src/chess/: chess_api.py  server.py
