[project]
name = "mcp-build-chess-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.21.0",
    "requests>=2.32.5",
]

[project.scripts]
chess = "chess.server:main"

[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir= {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
